listmonk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listmonk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: listmonk
  template:
    metadata:
      labels:
        app: listmonk
    spec:
      containers:
        - name: listmonk
          image: listmonk/listmonk:v6.1.0
          imagePullPolicy: Always
          command: ["sh", "-c"]
          args:
            - ./listmonk --install --idempotent --yes --config '' && ./listmonk --upgrade --yes --config '' && ./listmonk --config ''
          ports:
            - containerPort: 9000
              name: main
              protocol: TCP
          volumeMounts:
            - mountPath: /listmonk/uploads
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
