listmonk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listmonk
spec:
  selector:
    io.kompose.service: listmonk
  ports:
    - name: main
      port: 9000
      targetPort: 9000
